methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
        bool = true
             ^SlugTracking:21: error: type mismatch;
 found   : Unit
 required: Boolean
        bool = true
             ^SlugTracking:24: error: type mismatch;
 found   : Unit
 required: Boolean
        recule()
              ^